# telnyx-mcp-server

./: .env.example  .gitignore  CLAUDE_INTEGRATION.md  CLAUDE_MCP_CONFIG.json  README.md  REMOTE_DEPLOYMENT.md  REMOTE_MCP_PR_SUMMARY.md  SERVER_MANAGEMENT.md  WORKING_CLAUDE_CONFIG.md  azure.yaml  check_tool_schemas.py  dev_server.sh  generate_azure_token.py  generate_test_token.py  phone_response.json  pyproject.toml  requirements.txt  run_remote_server.sh  send_message_from_new_number.json  send_message_request.json  send_sms_request.json  server_manager.sh  startup.sh  telnyx-mcp-server.service  test_claude_api.py  test_schema_transformation.py
.github/workflows/: remote-server-tests.yml
azure_setup_guides/: Dockerfile.example  README_SNIPPET.md  README_SNIPPET_FOR_TELNYX_REPO.md  azure-pipelines.yml  azure.yaml  draft-notes.txt  env.yaml
azure_setup_guides/infra/: main.bicep
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/app/: web.bicep
infra/core/host/: appserviceplan.bicep
infra/core/monitor/: monitoring.bicep
scripts/: test_azure_deployment.sh  test_claude_integration.sh  test_deployed_mcp.py  test_mcp_protocol.py  test_remote_server.py
src/telnyx_mcp_server/: __init__.py  __main__.py  config.py  mcp.py  server.py
src/telnyx_mcp_server/remote/: __init__.py  auth.py  auth_store.py  schema_fixer.py  server.py
src/telnyx_mcp_server/telnyx/: __init__.py  client.py
src/telnyx_mcp_server/telnyx/services/: assistants.py  call_control.py  cloud_storage.py  connections.py  embeddings.py  messaging.py  messaging_profiles.py  numbers.py  secrets.py
src/telnyx_mcp_server/tools/: __init__.py  assistants.py  call_control.py  cloud_storage.py  connections.py  embeddings.py  messaging.py  messaging_profiles.py  phone_numbers.py  secrets.py  sms_conversations.py  webhooks.py
src/telnyx_mcp_server/utils/: error_handler.py  logger.py  service.py
src/telnyx_mcp_server/webhook/: __init__.py  handler.py  server.py
tests/: test_config.py  test_id_validation.py  test_smoke.py
tests/telnyx/: __init__.py
tests/telnyx/services/: __init__.py  test_assistants.py  test_embeddings.py  test_secrets.py
tests/tools/: test_embeddings.py  test_secrets.py
tests/webhook/: __init__.py  test_server.py
